# http-serde-ext

./: Cargo.toml  LICENSE  README.md
src/: authority.rs  header_map.rs  header_map_generic.rs  header_name.rs  header_value.rs  lib.rs  macros.rs  method.rs  path_and_query.rs  request.rs  response.rs  scheme.rs  status_code.rs  uri.rs  version.rs
tests/: test.rs
