[package]
name = "http-serde-ext"
version = "0.1.2"
authors = ["Andrew Toth"]
license = "MIT"
homepage = "https://github.com/andrewtoth/http-serde-ext/"
repository = "https://github.com/andrewtoth/http-serde-ext/"
documentation = "https://docs.rs/http-serde-ext/"
description = "serde support for http crate types Request, Response, Uri, StatusCode, HeaderMap, Method, in Option or other collections"
keywords = ["http", "serde", "serialization", "deserialize", "url"]
categories = ["encoding", "decoding", "networking", "web-programming"]
readme = "README.md"
edition = "2021"

[dependencies]
http = "0.2.9"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bincode = "1.3"
postcard = { version = "1.0", features = ["alloc"] }
serde_cbor = "0.11"
serde_json = "1.0"
serde_yaml = "0.9"
