[package]
name = "http-serde-ext"
version = "1.0.0"
authors = ["Andrew Toth"]
license = "MIT"
homepage = "https://github.com/andrewtoth/http-serde-ext/"
repository = "https://github.com/andrewtoth/http-serde-ext/"
documentation = "https://docs.rs/http-serde-ext/"
description = "serde support for http crate types Request, Response, Uri, StatusCode, HeaderMap, Method, in Option or other collections"
keywords = ["http", "serde", "serialization", "deserialize", "url"]
categories = ["encoding", "network-programming", "web-programming"]
readme = "README.md"
edition = "2021"

[dependencies]
http = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
bincode = "1.3"
fake = { git = "https://github.com/cksac/fake-rs", rev = "7d8ff1", features = [
    "http",
] }
postcard = { version = "1.0", features = ["alloc"] }
serde_cbor = "0.11"
serde_json = "1.0"
serde_yaml = "0.9"
